--- a/style/style.css
+++ b/style/style.css
@@ -89,12 +89,12 @@
 /*Projects */
 .projects{
     background-color: #EFEAEC;
-   padding-top: 20px;
-
+   padding-top: 10px;
+   padding-bottom: 10px;
 }
 
 .heading-title{
-    padding-top: 30px;
+   
     text-align: center;
     padding-bottom: 4%;
     display: flex;
@@ -115,7 +115,6 @@
     width: 250px;
     left: 45px;
     margin-top: 20px;
-    
     padding: 20px;
     margin: 3%;
 
@@ -124,8 +123,9 @@
     box-shadow: 2px 8px 16px 0 #B67A71;
 }
 .container{
-    
     padding: 5px;
+ 
+    
 }
 .card-title{
     font-size: 18px;
@@ -175,21 +175,23 @@
 /* Contact */
 .contact{
     background: linear-gradient(180deg, #F1B1A4 0%, #D2978E 100%);
-    height: 450px;
+    height: 400px;
     width: 100%;
 }
 .final-title{
-    padding-top: 30px;
-    padding: 4%;
-    font-size: 50px;
+    padding-top: 50px;
+ display: flex;
+    justify-content: center;
+    font-size: 60px;
     color: #3A5D66;
-    text-align: center;
+
+   margin-top: 0%;
 }
 
 .email{
     font-size: 16px;
     font-weight: 500;
-    margin-top: 2%;
+   /* margin-top: 2%;*/
     text-decoration: none;
     list-style-type: none;
     color: #3A5D66;
